--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/0bdx/build-helpers#readme",
   "devDependencies": {
+    "@types/node": "^18.11.19",
     "rollup": "^3.14.0"
   }
 }
