renames package from "build-helpers" to "@0bdx/build-helpers"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "build-helpers",
+  "name": "@0bdx/build-helpers",
   "version": "0.0.1",
   "description": "Helpful utilities for speeding up the ‘build’ part of a zero-build developer experience",
   "type": "module",
